# open-energy-status

./: .gitignore  Dockerfile  README.md  dashboard.py  project-setup.sh  pyproject.toml  run-ckan.sh
.github/workflows/: ci.yaml  publish_dashboard.yaml  test_ckan.yaml  test_raidial.yaml  test_raidiam.yaml
deploy/: index.html
deploy/css/: style.css
deploy/js/: site.js
setup_scripts/: project-setup.sh  run-ckan.sh  run-raidiam.sh
tests/: ckan_test.py  example.py  raidiam.py
