[tool.poetry]
name = "open-energy-status"
version = "0.1.0"
description = ""
authors = ["Kasia <katarzyna.kulma@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
black = {version = "^20.8b1", allow-prereleases = true}
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
